Fix a bug with zoom levels on cropped pages

BUG: 342003

Uses ideas of https://bugs.kde.org/show_bug.cgi?id=342003#c5